[package]
name = "advent_of_code"
version = "0.1.0"
authors = ["Kevin Moonen <dragonrider7225@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
extended_io = { git = "https://github.com/dragonrider7225/extended_io.git", version = "^0.2.0", tag = "v0.2.0" }
nom = "^6.0.1"
aoc_iter = { path = "iter_extensions" }
clap = "^2.33.3"

[workspace]
members = ["iter_extensions"]
